force-app/main/default/objects/Pays__c/fields/Code_Pays_2_caracteres__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays_2_caracteres__c</fullName>
    <label>Code Pays 2 caractères</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>