force-app/main/default/objects/Pays__c/fields/Code_Pays__c.field-meta.xml
<CustomField>
    <fullName>Code_Pays__c</fullName>
    <externalId>true</externalId>
    <label>Code Pays</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>