force-app/main/default/objects/Pays__c/fields/Indicatif__c.field-meta.xml
<CustomField>
    <fullName>Indicatif__c</fullName>
    <label>Indicatif Tel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>