force-app/main/default/objects/Pays__c/fields/Reseau__c.field-meta.xml
<CustomField>
    <fullName>Reseau__c</fullName>
    <label>Réseau</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UE</fullName>
            </value>
            <value>
                <fullName>HUE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>