force-app/main/default/objects/Pays__c/fields/TECH_External_Id__c.field-meta.xml
<CustomField>
    <fullName>TECH_External_Id__c</fullName>
    <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
    <externalId>true</externalId>
    <label>TECH_External_Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>