force-app/main/default/objects/Pays__c/fields/Zone_commercialisation__c.field-meta.xml
<CustomField>
    <fullName>Zone_commercialisation__c</fullName>
    <label>Zone commercialisation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUTRE</fullName>
            </value>
            <value>
                <fullName>AFRIQUE_01</fullName>
                <label>AFRIQUE_CE</label>
            </value>
            <value>
                <fullName>AFRIQUE_M</fullName>
            </value>
            <value>
                <fullName>AFRIQUE_02</fullName>
                <label>AFRIQUE_O</label>
            </value>
            <value>
                <fullName>ASIE</fullName>
            </value>
            <value>
                <fullName>INDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>