force-app/main/default/objects/Pays__c/fields/Zone_de_commercialisation_rapport__c.field-meta.xml
<CustomField>
    <fullName>Zone_de_commercialisation_rapport__c</fullName>
    <description>Formule pour récupérer le nom de valeur &quot;zone de commercialisation&quot;</description>
    <formula>CASE(  TEXT(Zone_commercialisation__c) , &quot;AFRIQUE_01&quot;, &quot;AFRIQUE_CE&quot;, &quot;AFRIQUE_02&quot;, &quot;AFRIQUE_O&quot;, TEXT(Zone_commercialisation__c) )</formula>
    <label>Zone de commercialisation rapport</label>
    <type>Text</type>
</CustomField>