force-app/main/default/objects/Pays__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Code_Pays_2_caracteres__c</columns>
    <columns>Indicatif__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>